# sudoku-solver

./: .gitignore  LICENSE  datasets.py  index.html  manifest.webmanifest  models.py  outlines_sorted.csv  puzzle_augmentation.py  pyproject.toml  requirements.txt  site.webmanifest  sw.js  train_localizer.py
.github/workflows/: deploy.yml
assets/: index-5bdfc557.css
data/: .gitignore  outlines_sorted.csv
localizer/: dataset.py  evalutate.py  model.py  train.py
ml/: convert_onnx.py  models.py  train.py
ml/data/: augment.py  datasets.py
ml/visualizations/: bbox_checker.py  webcam_localizer.py
models/: digitclassifier_best.pth.tar
notebooks/: digit_accuracy.ipynb  exploration.ipynb  img_proc_workflow.ipynb
scripts/: augment.py  download_dataset.py  webcam.py
solver/: App.tsx  app.json  package-lock.json  package.json
solver/android/: settings.gradle
solver/android/app/: build.gradle
solver/ios/: Podfile
solver/ios/solver/: Info.plist
solver/ios/solver.xcodeproj/: project.pbxproj
src/: convert_onnx.py  models.py  onnx_localizer.py  train.py  train_localizer.py  webcam_localizer.py
src/data/: datasets.py  puzzle_augmentation.py
sudoku_solver/: convert_onnx.py  models.py  train.py
sudoku_solver/visualizations/: webcam_localizer.py
web/: index.html  main.js  package.json  style.css  vite.config.js
webapp/: index.html  package.json  vite.config.ts
webapp/public/: digitclassifier.with_runtime_opt.ort
webapp/src/: App.css  App.tsx  DigitRecognition.tsx  Localizer.css  Localizer.tsx  Solver.tsx  constants.ts  image-processing.ts  main.tsx
(+12 files in other folders)
